make some bug, and develop the gui

--- a/src/hu/banattila/style/gamePane.css
+++ b/src/hu/banattila/style/gamePane.css
@@ -1,8 +1,22 @@
-.btn {
-    -fx-background-image: url("../imgs/meh2.jpeg");
+.pane{
+    -fx-background-color: #c1ffa5;
 }
 
-.button {
-    -fx-pref-width: 130;
-    -fx-pref-height: 130;
+.menu {
+    -fx-background-color: #a5fffc;
+}
+
+.btn {
+    -fx-background-color: #99ffff;
+    -fx-background-radius: 3 3 3 3;
+    -fx-font-size: 1.2em;
+    -fx-padding: 10px;
+    -fx-border-color: black;
+    -fx-border-width: 0 3 3 0;
+    -fx-border-radius: 10px ;
+}
+
+.btn:hover{
+    -fx-background-color: #ddffff;
+    -fx-opacity: 0.5;
 }
