--- a/src/hu/banattila/fxml/vidampark.fxml
+++ b/src/hu/banattila/fxml/vidampark.fxml
@@ -1,43 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0"
-            prefWidth="1024.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="hu.banattila.kontrollerek.VidamParkKontroller">
-    <children>
-        <HBox layoutX="621.0" layoutY="6.0" prefHeight="100.0" prefWidth="395.0"/>
-        <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <Button styleClass="btn" id="csonakazo" fx:id="csonakazo" layoutY="1.0" mnemonicParsing="false"
-                        text="Csónakázó"/>
-                <Label id="csonakazoSzint" fx:id="csonakazoSzint" layoutX="143.0" layoutY="5.0" text="Szint:"
-                       visible="false"/>
-            </children>
-        </Pane>
-        <Pane layoutX="89.0" layoutY="346.0" prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <Button id="korhinta" fx:id="korhinta" layoutY="1.0" mnemonicParsing="false" prefHeight="200.0"
-                        prefWidth="200.0" text="Körhinta"/>
-            </children>
-        </Pane>
-        <Pane layoutX="289.0" layoutY="106.0" prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <Button id="hullamvasut" fx:id="hullamvasut" layoutX="1.0" layoutY="-3.0" mnemonicParsing="false"
-                        prefHeight="112.0" prefWidth="130.0" text="Hullámvasút"/>
-            </children>
-        </Pane>
-        <Pane layoutX="521.0" layoutY="346.0" prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <Button id="vattacukros" fx:id="vattacukros" mnemonicParsing="false" prefHeight="200.0"
-                        prefWidth="200.0" text="Vattacukros"/>
-            </children>
-        </Pane>
-        <Pane layoutX="574.0" layoutY="106.0" prefHeight="200.0" prefWidth="200.0">
-            <children>
-                <Button id="szellemvasut" fx:id="szellemvasut" layoutY="1.0" mnemonicParsing="false" prefHeight="200.0"
-                        prefWidth="200.0" text="Szellemvasút"/>
-            </children>
-        </Pane>
-    </children>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane id="pane" fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" styleClass="pane" stylesheets="@../style/gamePane.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.VidamParkKontroller">
+    <Button fx:id="loadGame" layoutX="886.0" layoutY="140.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="122.0" styleClass="btn" text="Mentett Játék" />
+    <Button fx:id="newGame" layoutX="893.0" layoutY="30.0" mnemonicParsing="false" onAction="#newGame" onMouseClicked="#newGame" prefHeight="63.0" prefWidth="93.0" styleClass="btn" text="Új Játék" />
 </AnchorPane>
