--- a/src/hu/banattila/fxml/jatek.fxml
+++ b/src/hu/banattila/fxml/jatek.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -24,6 +23,7 @@
             <Label fx:id="penz" layoutX="785.0" layoutY="34.0" text="Pénz" />
             <Label fx:id="nev" layoutX="956.0" layoutY="31.0" text="Név" />
             <Label fx:id="uzenetek" layoutX="230.0" layoutY="31.0" text="Üzenetek" />
+            <Label fx:id="latogatok" layoutX="783.0" layoutY="67.0" text="Látogatók Száma" />
          </children>
       </Pane>
       <Pane layoutX="725.0" layoutY="90.0" prefHeight="517.0" prefWidth="278.0">
@@ -31,11 +31,11 @@
             <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="175.0">
                <children>
                   <Label layoutX="55.0" layoutY="6.0" text="Reklámok" />
-                  <CheckBox fx:id="szorolap" layoutX="21.0" layoutY="39.0" mnemonicParsing="false" text="Szórólapozás" />
-                  <CheckBox fx:id="ujsaghirdetes" layoutX="21.0" layoutY="70.0" mnemonicParsing="false" text="Újsághirdetés" />
-                  <CheckBox fx:id="oriasplakat" layoutX="21.0" layoutY="100.0" mnemonicParsing="false" text="Óriásplakát" />
-                  <CheckBox fx:id="tvReklam" layoutX="21.0" layoutY="130.0" mnemonicParsing="false" text="Tv Reklám" />
-                  <CheckBox fx:id="adSense" layoutX="21.0" layoutY="157.0" mnemonicParsing="false" text="AdSense" />
+                  <Label fx:id="szorolap" layoutX="44.0" layoutY="37.0" text="Szórólap" />
+                  <Label fx:id="ujsaghirdetes" layoutX="44.0" layoutY="61.0" text="Újsághirdetés" />
+                  <Label fx:id="oriasplakat" layoutX="44.0" layoutY="92.0" text="Óriásplakát" />
+                  <Label fx:id="tvReklam" layoutX="44.0" layoutY="121.0" text="Tv Reklám" />
+                  <Label fx:id="adSense" layoutX="44.0" layoutY="150.0" text="AdSense" />
                </children>
             </Pane>
             <Label fx:id="szorolapAr" layoutX="195.0" layoutY="54.0" text="Label" />
