--- a/src/hu/banattila/fxml/jatek.fxml
+++ b/src/hu/banattila/fxml/jatek.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -7,77 +8,161 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" styleClass="pane" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.JatekKontroller">
    <children>
-      <Button id="napVege" fx:id="napVege" layoutX="874.0" layoutY="624.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="100.0" text="Nap Vége" />
-      <Pane id="to" fx:id="to" layoutX="323.0" layoutY="453.0" prefHeight="200.0" prefWidth="200.0">
+      <Button id="napVege" fx:id="napVege" layoutX="875.0" layoutY="641.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="100.0" text="Nap Vége" />
+      <Pane id="to" fx:id="to" layoutX="26.0" layoutY="115.0" prefHeight="200.0" prefWidth="200.0">
          <children>
-            <Button id="csonakazo" fx:id="csonakazo" layoutX="40.0" layoutY="-59.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="153.0" text="Csónakázó" />
+            <Button id="csonakazo" fx:id="csonakazo" layoutX="14.0" layoutY="107.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="153.0" text="Csónakázó" />
          </children>
       </Pane>
-      <Button id="vattacukros" fx:id="vattacukros" layoutX="543.0" layoutY="553.0" mnemonicParsing="false" prefHeight="141.0" prefWidth="153.0" text="VattaCukros" />
-      <Button id="hullamvasut" fx:id="hullamvasut" layoutX="350.0" layoutY="126.0" mnemonicParsing="false" prefHeight="193.0" prefWidth="182.0" text="HullámVasút" />
-      <Button id="szellemvasut" fx:id="szellemvasut" layoutX="103.0" layoutY="126.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text="Szellem Vasút" />
-      <Button id="korhinta" fx:id="korhinta" layoutX="67.0" layoutY="417.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="189.0" text="Körhinta" />
-      <Pane id="menu" layoutY="1.0" prefHeight="89.0" prefWidth="1024.0" styleClass="menu">
+      <Button id="vattacukros" fx:id="vattacukros" layoutX="518.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text="VattaCukros" />
+      <Button id="hullamvasut" fx:id="hullamvasut" layoutX="512.0" layoutY="215.0" mnemonicParsing="false" prefHeight="152.0" prefWidth="153.0" text="HullámVasút" />
+      <Button id="szellemvasut" fx:id="szellemvasut" layoutX="56.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text="Szellem Vasút" />
+      <Button id="korhinta" fx:id="korhinta" layoutX="264.0" layoutY="315.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="189.0" text="Körhinta" />
+      <Pane id="menu" layoutY="1.0" prefHeight="127.0" prefWidth="1024.0" styleClass="menu">
          <children>
             <Label fx:id="nap" layoutX="38.0" layoutY="31.0" text="Nap" />
-            <Label fx:id="penz" layoutX="783.0" layoutY="31.0" text="Pénz" />
+            <Label fx:id="penz" layoutX="735.0" layoutY="31.0" text="Pénz" />
             <Label fx:id="nev" layoutX="947.0" layoutY="59.0" text="Név" />
-            <Label fx:id="uzenetek" layoutX="226.0" layoutY="31.0" text="Üzenetek" />
-            <Label fx:id="latogatok" layoutX="783.0" layoutY="67.0" text="Látogatók Száma" />
-            <Label layoutX="942.0" layoutY="31.0" text="Név" />
+            <Label fx:id="uzenetek" layoutX="135.0" layoutY="31.0" text="Üzenetek" />
+            <Label fx:id="latogatok" layoutX="735.0" layoutY="67.0" text="Látogatók Száma" />
+            <Label layoutX="947.0" layoutY="31.0" text="Név" />
          </children>
       </Pane>
-      <Pane layoutX="725.0" layoutY="90.0" prefHeight="517.0" prefWidth="278.0">
+      <Pane layoutX="692.0" layoutY="126.0" prefHeight="517.0" prefWidth="306.0">
          <children>
             <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="247.0">
                <children>
-                  <Label layoutX="111.0" layoutY="6.0" text="Reklámok" />
-                  <Label fx:id="szorolap" layoutX="55.0" layoutY="42.0" text="Szórólap" />
-                  <Label fx:id="ujsaghirdetes" layoutX="43.0" layoutY="74.0" text="Újsághirdetés" />
-                  <Label fx:id="oriasplakat" layoutX="50.0" layoutY="100.0" text="Óriásplakát" />
-                  <Label fx:id="tvReklam" layoutX="53.0" layoutY="135.0" text="Tv Reklám" />
-                  <Label fx:id="adSense" layoutX="55.0" layoutY="164.0" text="AdSense" />
+                  <Label layoutX="67.0" layoutY="5.0" text="Reklámok" />
+                  <Label fx:id="szorolap" layoutX="15.0" layoutY="44.0" text="Szórólap" />
+                  <Label fx:id="ujsaghirdetes" layoutX="15.0" layoutY="73.0" text="Újsághirdetés" />
+                  <Label fx:id="oriasplakat" layoutX="16.0" layoutY="100.0" text="Óriásplakát" />
+                  <Label fx:id="tvReklam" layoutX="19.0" layoutY="127.0" text="Tv Reklám" />
+                  <Label fx:id="adSense" layoutX="23.0" layoutY="156.0" text="AdSense" />
+                  <VBox fx:id="reklamPanel" layoutX="111.0" layoutY="27.0" prefHeight="165.0" prefWidth="136.0">
+                     <children>
+                        <Label fx:id="reklamAr" text="Ár">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                        </Label>
+                        <Label prefHeight="14.0" prefWidth="144.0" text="Látogató számot">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                        </Label>
+                        <Label prefHeight="14.0" prefWidth="144.0" text="ennyivel növeli:">
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="latogatoNoveles" text="Novekedes">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label text="Jelenlegi hatásfok:">
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                        </Label>
+                        <Label fx:id="hatasfok" text="Hatasfok">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="megrendelve" text="Megrendelve">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets top="10.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </VBox>
                </children>
             </Pane>
-            <Label fx:id="szorolapAr" layoutX="195.0" layoutY="54.0" text="Label" />
-            <Label fx:id="ujsaghirdetesAr" layoutX="195.0" layoutY="86.0" text="Label" />
-            <Label fx:id="oriasplakatAr" layoutX="195.0" layoutY="114.0" text="Label" />
-            <Label fx:id="tvReklamAr" layoutX="195.0" layoutY="147.0" text="Label" />
-            <Label fx:id="adSenseAr" layoutX="195.0" layoutY="177.0" text="Label" />
-            <Pane layoutX="14.0" layoutY="232.0" prefHeight="284.0" prefWidth="264.0">
+            <Pane layoutX="-1.0" layoutY="232.0" prefHeight="284.0" prefWidth="306.0">
                <children>
                   <Label layoutX="86.0" layoutY="14.0" text="Alkalmazottak" />
                   <Label layoutX="29.0" layoutY="46.0" prefHeight="16.0" prefWidth="89.0" text="Karbantartók" />
                   <VBox layoutX="10.0" layoutY="86.0" prefHeight="112.0" prefWidth="153.0">
                      <children>
-                        <Label fx:id="karbantarto1" text="Nincs alkalmazásban" />
-                        <Label fx:id="karbantarto2" prefHeight="16.0" prefWidth="137.0" text="Nincs alkalmazásban" />
-                        <Label fx:id="karbantarto3" text="Nincs alkalmazásban" />
-                        <Label fx:id="karbantarto4" text="Nincs alkalmazásban" />
-                        <Label fx:id="karbantarto5" text="Nincs alkalmazásban" />
+                        <Label fx:id="karbantarto1" text="Nincs alkalmazásban">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Label>
+                        <Label fx:id="karbantarto2" prefHeight="18.0" prefWidth="151.0" text="Nincs alkalmazásban">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Label>
+                        <Label fx:id="karbantarto3" text="Nincs alkalmazásban">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Label>
+                        <Label fx:id="karbantarto4" text="Nincs alkalmazásban">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Label>
+                        <Label fx:id="karbantarto5" text="Nincs alkalmazásban">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Label>
                      </children>
                   </VBox>
-                  <Label layoutX="179.0" layoutY="198.0" text="Könyvelő" />
-                  <CheckBox fx:id="lali" layoutX="167.0" layoutY="225.0" mnemonicParsing="false" text="Könyvelő" />
+                  <Label layoutX="179.0" layoutY="46.0" text="Könyvelő" />
+                  <CheckBox fx:id="konyvelo" layoutX="146.0" layoutY="62.0" mnemonicParsing="false" text="Könyvelő" />
                   <TextField fx:id="kitAlkalmaz" layoutX="13.0" layoutY="221.0" prefHeight="26.0" prefWidth="122.0" />
-                  <Label layoutX="9.0" layoutY="198.0" text="Új alkalmazott neve" />
+                  <Label layoutX="24.0" layoutY="197.0" text="Új alkalmazott neve">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
                   <Button fx:id="alkalmaz" layoutX="43.0" layoutY="247.0" mnemonicParsing="false" text="Alkalmaz" />
-                  <VBox layoutX="155.0" layoutY="88.0" prefHeight="83.0" prefWidth="25.0">
-                     <children>
-                        <Label fx:id="kirug1" text="-" />
-                        <Label fx:id="kirug2" text="-" />
-                        <Label fx:id="kirug3" text="-" />
-                        <Label fx:id="kirug4" text="-" />
-                        <Label fx:id="kirug5" text="-" />
-                     </children>
-                  </VBox>
+                  <TextField fx:id="kitRugKi" layoutX="148.0" layoutY="220.0" prefHeight="26.0" prefWidth="122.0" />
+                  <Label layoutX="144.0" layoutY="197.0" text="Kirúgandó alkalmazott neve">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="kirug" layoutX="178.0" layoutY="246.0" mnemonicParsing="false" text="Kirúg" />
                </children>
             </Pane>
          </children>
       </Pane>
-      <CheckBox fx:id="autoSave" layoutX="844.0" layoutY="727.0" mnemonicParsing="false" text="Automatikus mentés" />
+      <CheckBox fx:id="autoSave" layoutX="845.0" layoutY="736.0" mnemonicParsing="false" text="Automatikus mentés" />
+      <Pane fx:id="panel" layoutX="226.0" layoutY="154.0" prefHeight="127.0" prefWidth="264.0">
+         <children>
+            <VBox layoutY="2.0" prefHeight="121.0" prefWidth="264.0">
+               <children>
+                  <Label fx:id="szint" text="Szint">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="18.0" prefWidth="255.0" text="Következő szint fejlesztési költsége" textAlignment="CENTER">
+                     <padding>
+                        <Insets top="10.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="ktg" text="koltseg" />
+                  <Label fx:id="bevetel" text="Bevétel látogatónként">
+                     <padding>
+                        <Insets top="10.0" />
+                     </padding>
+                  </Label>
+               </children>
+            </VBox>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
