--- a/src/hu/banattila/fxml/jatek.fxml
+++ b/src/hu/banattila/fxml/jatek.fxml
@@ -12,12 +12,7 @@
 
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" styleClass="pane" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.JatekKontroller">
    <children>
-      <Button id="napVege" fx:id="napVege" layoutX="875.0" layoutY="641.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="100.0" text="Nap Vége" />
-      <Pane id="to" fx:id="to" layoutX="26.0" layoutY="115.0" prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <Button id="csonakazo" fx:id="csonakazo" layoutX="14.0" layoutY="107.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="153.0" text="Csónakázó" />
-         </children>
-      </Pane>
+      <Button id="csonakazo" fx:id="csonakazo" layoutX="30.0" layoutY="218.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="153.0" text="Csónakázó" />
       <Button id="vattacukros" fx:id="vattacukros" layoutX="518.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text="VattaCukros" />
       <Button id="hullamvasut" fx:id="hullamvasut" layoutX="512.0" layoutY="215.0" mnemonicParsing="false" prefHeight="152.0" prefWidth="153.0" text="HullámVasút" />
       <Button id="szellemvasut" fx:id="szellemvasut" layoutX="56.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text="Szellem Vasút" />
@@ -32,19 +27,19 @@
             <Label layoutX="947.0" layoutY="31.0" text="Név" />
          </children>
       </Pane>
-      <Pane layoutX="692.0" layoutY="126.0" prefHeight="517.0" prefWidth="306.0">
+      <Pane layoutX="727.0" layoutY="126.0" prefHeight="638.0" prefWidth="291.0" styleClass="infopanel">
          <children>
-            <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="247.0">
+            <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="247.0" styleClass="reklampanel">
                <children>
-                  <Label layoutX="67.0" layoutY="5.0" text="Reklámok" />
-                  <Label fx:id="szorolap" layoutX="15.0" layoutY="44.0" text="Szórólap" />
-                  <Label fx:id="ujsaghirdetes" layoutX="15.0" layoutY="73.0" text="Újsághirdetés" />
-                  <Label fx:id="oriasplakat" layoutX="16.0" layoutY="100.0" text="Óriásplakát" />
-                  <Label fx:id="tvReklam" layoutX="19.0" layoutY="127.0" text="Tv Reklám" />
-                  <Label fx:id="adSense" layoutX="23.0" layoutY="156.0" text="AdSense" />
+                  <Label layoutX="67.0" layoutY="5.0" styleClass="reklamok" text="Reklámok" />
+                  <Label fx:id="szorolap" layoutX="15.0" layoutY="44.0" styleClass="reklamok" text="Szórólap" />
+                  <Label fx:id="ujsaghirdetes" layoutX="15.0" layoutY="73.0" styleClass="reklamok" text="Újsághirdetés" />
+                  <Label fx:id="oriasplakat" layoutX="16.0" layoutY="100.0" styleClass="reklamok" text="Óriásplakát" />
+                  <Label fx:id="tvReklam" layoutX="19.0" layoutY="127.0" styleClass="reklamok" text="Tv Reklám" />
+                  <Label fx:id="adSense" layoutX="23.0" layoutY="156.0" styleClass="reklamok" text="AdSense" />
                   <VBox fx:id="reklamPanel" layoutX="111.0" layoutY="27.0" prefHeight="165.0" prefWidth="136.0">
                      <children>
-                        <Label fx:id="reklamAr" text="Ár">
+                        <Label fx:id="reklamAr" styleClass="label" text="Ár">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -52,7 +47,7 @@
                               <Insets top="10.0" />
                            </padding>
                         </Label>
-                        <Label prefHeight="14.0" prefWidth="144.0" text="Látogató számot">
+                        <Label prefHeight="14.0" prefWidth="144.0" styleClass="label" text="Látogató számot">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -60,27 +55,27 @@
                               <Insets top="10.0" />
                            </padding>
                         </Label>
-                        <Label prefHeight="14.0" prefWidth="144.0" text="ennyivel növeli:">
+                        <Label prefHeight="14.0" prefWidth="144.0" styleClass="label" text="ennyivel növeli:">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Label>
-                        <Label fx:id="latogatoNoveles" text="Novekedes">
+                        <Label fx:id="latogatoNoveles" styleClass="label" text="Novekedes">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label text="Jelenlegi hatásfok:">
+                        <Label styleClass="label" text="Jelenlegi hatásfok:">
                            <padding>
                               <Insets top="10.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="hatasfok" text="Hatasfok">
+                        <Label fx:id="hatasfok" styleClass="label" text="Hatasfok">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label fx:id="megrendelve" text="Megrendelve">
+                        <Label fx:id="megrendelve" styleClass="label" text="Megrendelve">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -92,7 +87,7 @@
                   </VBox>
                </children>
             </Pane>
-            <Pane layoutX="-1.0" layoutY="232.0" prefHeight="284.0" prefWidth="306.0">
+            <Pane layoutX="-1.0" layoutY="232.0" prefHeight="284.0" prefWidth="306.0" styleClass="karbantartoPanel">
                <children>
                   <Label layoutX="86.0" layoutY="14.0" text="Alkalmazottak" />
                   <Label layoutX="29.0" layoutY="46.0" prefHeight="16.0" prefWidth="89.0" text="Karbantartók" />
@@ -121,7 +116,7 @@
                      </children>
                   </VBox>
                   <Label layoutX="179.0" layoutY="46.0" text="Könyvelő" />
-                  <CheckBox fx:id="konyvelo" layoutX="146.0" layoutY="62.0" mnemonicParsing="false" text="Könyvelő" />
+                  <CheckBox fx:id="konyvelo" layoutX="162.0" layoutY="62.0" mnemonicParsing="false" text="Könyvelő" />
                   <TextField fx:id="kitAlkalmaz" layoutX="13.0" layoutY="221.0" prefHeight="26.0" prefWidth="122.0" />
                   <Label layoutX="24.0" layoutY="197.0" text="Új alkalmazott neve">
                      <font>
@@ -137,25 +132,31 @@
                   <Button fx:id="kirug" layoutX="178.0" layoutY="246.0" mnemonicParsing="false" text="Kirúg" />
                </children>
             </Pane>
+            <CheckBox fx:id="autoSave" layoutX="74.0" layoutY="615.0" mnemonicParsing="false" text="Automatikus mentés" />
+            <Button id="napVege" fx:id="napVege" layoutX="102.0" layoutY="516.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="100.0" text="Nap Vége" />
          </children>
       </Pane>
-      <CheckBox fx:id="autoSave" layoutX="845.0" layoutY="736.0" mnemonicParsing="false" text="Automatikus mentés" />
-      <Pane fx:id="panel" layoutX="226.0" layoutY="154.0" prefHeight="127.0" prefWidth="264.0">
+      <Pane fx:id="panel" layoutX="227.0" layoutY="182.0" prefHeight="127.0" prefWidth="264.0" styleClass="infopanel">
          <children>
             <VBox layoutY="2.0" prefHeight="121.0" prefWidth="264.0">
                <children>
-                  <Label fx:id="szint" text="Szint">
+                  <Label fx:id="jatekNev" styleClass="label" text="Név">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="szint" styleClass="label" text="Szint">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="18.0" prefWidth="255.0" text="Következő szint fejlesztési költsége" textAlignment="CENTER">
+                  <Label prefHeight="18.0" prefWidth="255.0" styleClass="label" text="Következő szint fejlesztési költsége" textAlignment="CENTER">
                      <padding>
                         <Insets top="10.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="ktg" text="koltseg" />
-                  <Label fx:id="bevetel" text="Bevétel látogatónként">
+                  <Label fx:id="ktg" styleClass="label" text="koltseg" />
+                  <Label fx:id="bevetel" styleClass="label" text="Bevétel látogatónként">
                      <padding>
                         <Insets top="10.0" />
                      </padding>
