--- a/src/hu/banattila/fxml/vidampark.fxml
+++ b/src/hu/banattila/fxml/vidampark.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="pane" fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" styleClass="pane" stylesheets="@../style/gamePane.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.VidamParkKontroller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="769.0" prefWidth="1025.0" styleClass="pane" stylesheets="@../style/gamePane.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.VidamParkKontroller">
     <Button fx:id="loadGame" layoutX="886.0" layoutY="140.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="122.0" styleClass="btn" text="Mentett Játék" />
-    <Button fx:id="newGame" layoutX="893.0" layoutY="30.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="93.0" styleClass="btn" text="Új Játék" />
+    <Button fx:id="newGame" layoutX="170.0" layoutY="301.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="93.0" styleClass="btn" text="Új Játék" />
 </AnchorPane>
