clear a bug, and add some css(but not finished) and layout finished

--- a/src/hu/banattila/fxml/jatekBetoltes.fxml
+++ b/src/hu/banattila/fxml/jatekBetoltes.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.JatekBetoltesKontroller">
    <children>
-      <ListView fx:id="uzenetek" layoutX="234.0" layoutY="313.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="uzenetek" layoutX="362.0" layoutY="214.0" prefHeight="340.0" prefWidth="300.0" styleClass="list-cell" />
+      <Button fx:id="vissza" layoutX="379.0" layoutY="606.0" mnemonicParsing="false" text="Vissza" />
+      <Button fx:id="betolt" layoutX="562.0" layoutY="606.0" mnemonicParsing="false" text="Játék betöltése" />
    </children>
 </AnchorPane>
