--- a/src/hu/banattila/fxml/jatek.fxml
+++ b/src/hu/banattila/fxml/jatek.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" styleClass="pane" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.JatekKontroller">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.JatekKontroller">
    <children>
-      <Button id="csonakazo" fx:id="csonakazo" layoutX="30.0" layoutY="218.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="153.0" text="Csónakázó" />
-      <Button id="vattacukros" fx:id="vattacukros" layoutX="518.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text="VattaCukros" />
-      <Button id="hullamvasut" fx:id="hullamvasut" layoutX="512.0" layoutY="215.0" mnemonicParsing="false" prefHeight="152.0" prefWidth="153.0" text="HullámVasút" />
-      <Button id="szellemvasut" fx:id="szellemvasut" layoutX="56.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text="Szellem Vasút" />
-      <Button id="korhinta" fx:id="korhinta" layoutX="264.0" layoutY="315.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="189.0" text="Körhinta" />
+      <Button id="csonakazo" fx:id="csonakazo" layoutX="30.0" layoutY="218.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="153.0" text=" " />
+      <Button id="vattacukros" fx:id="vattacukros" layoutX="518.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text=" " />
+      <Button id="hullamvasut" fx:id="hullamvasut" layoutX="512.0" layoutY="215.0" mnemonicParsing="false" prefHeight="152.0" prefWidth="153.0" text=" " />
+      <Button id="szellemvasut" fx:id="szellemvasut" layoutX="56.0" layoutY="493.0" mnemonicParsing="false" prefHeight="165.0" prefWidth="153.0" text=" " />
+      <Button id="korhinta" fx:id="korhinta" layoutX="264.0" layoutY="315.0" mnemonicParsing="false" prefHeight="159.0" prefWidth="189.0" text=" " />
       <Pane id="menu" layoutY="1.0" prefHeight="127.0" prefWidth="1024.0" styleClass="menu">
          <children>
             <Label fx:id="nap" layoutX="38.0" layoutY="31.0" text="Nap" />
@@ -29,7 +29,7 @@
       </Pane>
       <Pane layoutX="727.0" layoutY="126.0" prefHeight="638.0" prefWidth="291.0" styleClass="infopanel">
          <children>
-            <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="247.0" styleClass="reklampanel">
+            <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="247.0">
                <children>
                   <Label layoutX="67.0" layoutY="5.0" styleClass="reklamok" text="Reklámok" />
                   <Label fx:id="szorolap" layoutX="15.0" layoutY="44.0" styleClass="reklamok" text="Szórólap" />
@@ -39,7 +39,7 @@
                   <Label fx:id="adSense" layoutX="23.0" layoutY="156.0" styleClass="reklamok" text="AdSense" />
                   <VBox fx:id="reklamPanel" layoutX="111.0" layoutY="27.0" prefHeight="165.0" prefWidth="136.0">
                      <children>
-                        <Label fx:id="reklamAr" styleClass="label" text="Ár">
+                        <Label fx:id="reklamAr" text="Ár">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -47,7 +47,7 @@
                               <Insets top="10.0" />
                            </padding>
                         </Label>
-                        <Label prefHeight="14.0" prefWidth="144.0" styleClass="label" text="Látogató számot">
+                        <Label prefHeight="14.0" prefWidth="144.0" text="Látogató számot">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -55,27 +55,27 @@
                               <Insets top="10.0" />
                            </padding>
                         </Label>
-                        <Label prefHeight="14.0" prefWidth="144.0" styleClass="label" text="ennyivel növeli:">
+                        <Label prefHeight="14.0" prefWidth="144.0" text="ennyivel növeli:">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Label>
-                        <Label fx:id="latogatoNoveles" styleClass="label" text="Novekedes">
+                        <Label fx:id="latogatoNoveles" text="Novekedes">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label styleClass="label" text="Jelenlegi hatásfok:">
+                        <Label text="Jelenlegi hatásfok:">
                            <padding>
                               <Insets top="10.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="hatasfok" styleClass="label" text="Hatasfok">
+                        <Label fx:id="hatasfok" text="Hatasfok">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label fx:id="megrendelve" styleClass="label" text="Megrendelve">
+                        <Label fx:id="megrendelve" text="Megrendelve">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -87,7 +87,7 @@
                   </VBox>
                </children>
             </Pane>
-            <Pane layoutX="-1.0" layoutY="232.0" prefHeight="284.0" prefWidth="306.0" styleClass="karbantartoPanel">
+            <Pane layoutX="-1.0" layoutY="232.0" prefHeight="284.0" prefWidth="306.0">
                <children>
                   <Label layoutX="86.0" layoutY="14.0" text="Alkalmazottak" />
                   <Label layoutX="29.0" layoutY="46.0" prefHeight="16.0" prefWidth="89.0" text="Karbantartók" />
@@ -115,48 +115,48 @@
                            </font></Label>
                      </children>
                   </VBox>
-                  <Label layoutX="179.0" layoutY="46.0" text="Könyvelő" />
+                  <Label fx:id="konyv" layoutX="179.0" layoutY="46.0" text="Könyvelő" />
                   <CheckBox fx:id="konyvelo" layoutX="162.0" layoutY="62.0" mnemonicParsing="false" text="Könyvelő" />
-                  <TextField fx:id="kitAlkalmaz" layoutX="13.0" layoutY="221.0" prefHeight="26.0" prefWidth="122.0" />
-                  <Label layoutX="24.0" layoutY="197.0" text="Új alkalmazott neve">
+                  <TextField fx:id="kitAlkalmaz" layoutX="13.0" layoutY="244.0" prefHeight="26.0" prefWidth="122.0" />
+                  <Label layoutX="24.0" layoutY="223.0" text="Új alkalmazott neve">
                      <font>
                         <Font size="10.0" />
                      </font></Label>
-                  <Button fx:id="alkalmaz" layoutX="43.0" layoutY="247.0" mnemonicParsing="false" text="Alkalmaz" />
-                  <TextField fx:id="kitRugKi" layoutX="148.0" layoutY="220.0" prefHeight="26.0" prefWidth="122.0" />
-                  <Label layoutX="144.0" layoutY="197.0" text="Kirúgandó alkalmazott neve">
+                  <TextField fx:id="kitRugKi" layoutX="143.0" layoutY="244.0" prefHeight="26.0" prefWidth="122.0" />
+                  <Label layoutX="138.0" layoutY="223.0" text="Kirúgandó alkalmazott neve">
                      <font>
                         <Font size="10.0" />
                      </font>
                   </Label>
-                  <Button fx:id="kirug" layoutX="178.0" layoutY="246.0" mnemonicParsing="false" text="Kirúg" />
                </children>
             </Pane>
             <CheckBox fx:id="autoSave" layoutX="74.0" layoutY="615.0" mnemonicParsing="false" text="Automatikus mentés" />
-            <Button id="napVege" fx:id="napVege" layoutX="102.0" layoutY="516.0" mnemonicParsing="false" prefHeight="89.0" prefWidth="100.0" text="Nap Vége" />
+            <Button id="napVege" fx:id="napVege" layoutX="102.0" layoutY="566.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="100.0" text="Nap Vége" />
+            <Button fx:id="alkalmaz" layoutX="32.0" layoutY="514.0" mnemonicParsing="false" text="Alkalmaz" />
+            <Button fx:id="kirug" layoutX="176.0" layoutY="514.0" mnemonicParsing="false" text="Kirúg" />
          </children>
       </Pane>
       <Pane fx:id="panel" layoutX="227.0" layoutY="182.0" prefHeight="127.0" prefWidth="264.0" styleClass="infopanel">
          <children>
             <VBox layoutY="2.0" prefHeight="121.0" prefWidth="264.0">
                <children>
-                  <Label fx:id="jatekNev" styleClass="label" text="Név">
+                  <Label fx:id="jatekNev" text="Név">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="szint" styleClass="label" text="Szint">
+                  <Label fx:id="szint" text="Szint">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="18.0" prefWidth="255.0" styleClass="label" text="Következő szint fejlesztési költsége" textAlignment="CENTER">
+                  <Label prefHeight="18.0" prefWidth="255.0" text="Következő szint fejlesztési költsége" textAlignment="CENTER">
                      <padding>
                         <Insets top="10.0" />
                      </padding>
                   </Label>
-                  <Label fx:id="ktg" styleClass="label" text="koltseg" />
-                  <Label fx:id="bevetel" styleClass="label" text="Bevétel látogatónként">
+                  <Label fx:id="ktg" text="koltseg" />
+                  <Label fx:id="bevetel" text="Bevétel látogatónként">
                      <padding>
                         <Insets top="10.0" />
                      </padding>
@@ -165,5 +165,7 @@
             </VBox>
          </children>
       </Pane>
+      <Button fx:id="exit" layoutX="38.0" layoutY="697.0" mnemonicParsing="false" text="Kilépés" />
+      <Button fx:id="save" layoutX="328.0" layoutY="697.0" mnemonicParsing="false" text="Mentés" />
    </children>
 </AnchorPane>
