--- a/src/hu/banattila/fxml/ujJatek.fxml
+++ b/src/hu/banattila/fxml/ujJatek.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane styleClass="pane" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.UjJatekKontroller">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.UjJatekKontroller">
    <children>
       <Label layoutX="160.0" layoutY="133.0" text="Add meg a neved" />
       <TextField id="nev" fx:id="nev" layoutX="132.0" layoutY="180.0" promptText="Kukorica János" />
