--- a/src/hu/banattila/fxml/vidampark.fxml
+++ b/src/hu/banattila/fxml/vidampark.fxml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="769.0" prefWidth="1025.0" styleClass="pane" stylesheets="@../style/gamePane.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.VidamParkKontroller">
-    <Button fx:id="loadGame" layoutX="886.0" layoutY="140.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="122.0" styleClass="btn" text="Mentett Játék" />
-    <Button fx:id="newGame" layoutX="170.0" layoutY="301.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="93.0" styleClass="btn" text="Új Játék" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="769.0" prefWidth="1025.0" stylesheets="@../style/gamePane.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.banattila.kontrollerek.VidamParkKontroller">
+    <Button fx:id="loadGame" layoutX="638.0" layoutY="588.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="122.0" text="Mentett Játék" />
+    <Button fx:id="newGame" layoutX="290.0" layoutY="591.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="93.0"  text="Új Játék" />
+   <ImageView fitHeight="505.0" fitWidth="809.0" layoutX="176.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@../style/imgs/vidampark.jpeg" />
+      </image>
+   </ImageView>
 </AnchorPane>
