--- a/src/hu/banattila/fxml/ujJatek.fxml
+++ b/src/hu/banattila/fxml/ujJatek.fxml
@@ -13,5 +13,6 @@
       <Label layoutX="727.0" layoutY="133.0" text="Válassz nehézségi szintet" />
       <ChoiceBox id="nehezseg" fx:id="nehezseg" layoutX="736.0" layoutY="180.0" prefWidth="150.0" />
       <Button id="kezd" fx:id="kezd" layoutX="481.0" layoutY="371.0" mnemonicParsing="false" text="Kezdés" />
+      <Button fx:id="back" layoutX="483.0" layoutY="532.0" mnemonicParsing="false" text="Vissza" />
    </children>
 </AnchorPane>
