--- a/src/hu/banattila/fxml/jatek.fxml
+++ b/src/hu/banattila/fxml/jatek.fxml
@@ -27,9 +27,9 @@
             <Label layoutX="644.0" layoutY="64.0" styleClass="player" text="Név:" />
          </children>
       </Pane>
-      <Pane layoutX="727.0" layoutY="126.0" prefHeight="638.0" prefWidth="297.0" styleClass="infopanel">
+      <Pane layoutX="704.0" layoutY="126.0" prefHeight="638.0" prefWidth="320.0" styleClass="infopanel">
          <children>
-            <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="247.0">
+            <Pane layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="305.0">
                <children>
                   <Label layoutX="67.0" layoutY="5.0" styleClass="reklamok" text="Reklámok" />
                   <Label fx:id="szorolap" layoutX="15.0" layoutY="44.0" styleClass="reklamok" text="Szórólap" />
@@ -37,7 +37,7 @@
                   <Label fx:id="oriasplakat" layoutX="16.0" layoutY="100.0" styleClass="reklamok" text="Óriásplakát" />
                   <Label fx:id="tvReklam" layoutX="19.0" layoutY="127.0" styleClass="reklamok" text="Tv Reklám" />
                   <Label fx:id="adSense" layoutX="23.0" layoutY="156.0" styleClass="reklamok" text="AdSense" />
-                  <VBox fx:id="reklamPanel" layoutX="111.0" layoutY="27.0" prefHeight="165.0" prefWidth="136.0">
+                  <VBox fx:id="reklamPanel" layoutX="111.0" layoutY="27.0" prefHeight="165.0" prefWidth="167.0">
                      <children>
                         <Label fx:id="reklamAr" text="Ár">
                            <font>
@@ -87,7 +87,7 @@
                   </VBox>
                </children>
             </Pane>
-            <Pane layoutX="-1.0" layoutY="232.0" prefHeight="284.0" prefWidth="306.0">
+            <Pane layoutX="-1.0" layoutY="232.0" prefHeight="318.0" prefWidth="320.0">
                <children>
                   <Label layoutX="86.0" layoutY="14.0" text="Alkalmazottak" />
                   <Label layoutX="29.0" layoutY="46.0" prefHeight="16.0" prefWidth="89.0" text="Karbantartók" />
@@ -115,24 +115,24 @@
                            </font></Label>
                      </children>
                   </VBox>
-                  <Label fx:id="konyv" layoutX="179.0" layoutY="46.0" text="Könyvelő" />
-                  <CheckBox fx:id="konyvelo" layoutX="162.0" layoutY="62.0" mnemonicParsing="false" text="Könyvelő" />
+                  <Label fx:id="konyv" layoutX="212.0" layoutY="45.0" text="Könyvelő" />
+                  <CheckBox fx:id="konyvelo" layoutX="195.0" layoutY="61.0" mnemonicParsing="false" text="Könyvelő" />
                   <TextField fx:id="kitAlkalmaz" layoutX="13.0" layoutY="244.0" prefHeight="26.0" prefWidth="122.0" />
                   <Label layoutX="24.0" layoutY="223.0" text="Új alkalmazott neve">
                      <font>
                         <Font size="10.0" />
                      </font></Label>
-                  <TextField fx:id="kitRugKi" layoutX="143.0" layoutY="244.0" prefHeight="26.0" prefWidth="122.0" />
-                  <Label layoutX="138.0" layoutY="223.0" text="Kirúgandó alkalmazott neve">
+                  <TextField fx:id="kitRugKi" layoutX="159.0" layoutY="244.0" prefHeight="26.0" prefWidth="122.0" />
+                  <Label layoutX="150.0" layoutY="223.0" text="Kirúgandó alkalmazott neve">
                      <font>
                         <Font size="10.0" />
                      </font>
                   </Label>
+                  <Button fx:id="kirug" layoutX="190.0" layoutY="276.0" mnemonicParsing="false" text="Kirúg" />
+                  <Button fx:id="alkalmaz" layoutX="35.0" layoutY="276.0" mnemonicParsing="false" text="Alkalmaz" />
                </children>
             </Pane>
-            <Button id="napVege" fx:id="napVege" layoutX="102.0" layoutY="566.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="100.0" text="Nap Vége" />
-            <Button fx:id="alkalmaz" layoutX="32.0" layoutY="514.0" mnemonicParsing="false" text="Alkalmaz" />
-            <Button fx:id="kirug" layoutX="176.0" layoutY="514.0" mnemonicParsing="false" text="Kirúg" />
+            <Button fx:id="napVege" layoutX="99.0" layoutY="586.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="100.0" text="Nap Vége" />
          </children>
       </Pane>
       <Pane fx:id="panel" layoutX="227.0" layoutY="182.0" prefHeight="127.0" prefWidth="264.0" styleClass="infopanel">
