--- a/src/hu/banattila/fxml/jatekBetoltes.fxml
+++ b/src/hu/banattila/fxml/jatekBetoltes.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -9,5 +10,6 @@
       <ListView fx:id="uzenetek" layoutX="362.0" layoutY="214.0" prefHeight="340.0" prefWidth="300.0" styleClass="list-cell" />
       <Button fx:id="vissza" layoutX="379.0" layoutY="606.0" mnemonicParsing="false" text="Vissza" />
       <Button fx:id="betolt" layoutX="562.0" layoutY="606.0" mnemonicParsing="false" text="Játék betöltése" />
+      <Label fx:id="noSaved" layoutX="448.0" layoutY="166.0" styleClass="noSaved" text="Nincs mentett játék" />
    </children>
 </AnchorPane>
